数式の追記

--- a/scr/PRML2_1.ipynb
+++ b/scr/PRML2_1.ipynb
@@ -31,8 +31,25 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# ベルヌーイ分布\n",
-        "プロットしてみる"
+        "# ベルヌーイ分布"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "aKSfsmX0zEgA",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### 基本式\n",
+        "\\begin{equation*}\n",
+        "Bern(x|\\mu) =  \\mu^{x}(1-\\mu)^{1-x}\\end{equation*}\n",
+        "\n",
+        "### 尤度関数\n",
+        "\\begin{equation*}\n",
+        "p(D|\\mu) = \\prod_{n=1}^N p(x_n|\\mu) = \\prod_{n=1}^N \\mu^{x_n}\n",
+        "(1-\\mu)^{1-x_n}\\end{equation*}\n",
+        "\n"
       ]
     },
     {
@@ -76,7 +93,7 @@
         "plt.xlim(0,100)\n",
         "plt.xticks(np.arange(0, n+1, 10))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,6 +131,19 @@
           }
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "PU3J_EyY0eCm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
