--- a/scr/PRML2_2.ipynb
+++ b/scr/PRML2_2.ipynb
@@ -43,14 +43,14 @@
       "source": [
         "### ベルヌーイ分布の尤度関数\n",
         "\\begin{equation*}\n",
-        "p(D|\\mu) = \\prod_{n=1}^N p(x_n|\\mu) = \\prod_{n=1}^N \\mu^{x_n}\n",
+        "p(D|) = \\prod_{n=1}^N p(x_n|\\mu) = \\prod_{n=1}^N \\mu^{x_n}\n",
         "(1-\\mu)^{1-x_n}\\end{equation*}\n",
         "\n",
         "\n",
         "\n",
         "### ベルヌーイ分布の尤度関数の多項化\n",
         "\\begin{equation*}\n",
-        "mlt\\_Bern(x|\\bf{\\mu}) =  \\prod_{k=1}^K\\mu_k^{m_k}\\end{equation*}\n",
+        "mlt\\_Bern(x|\\boldsymbol{\\mu}) =  \\prod_{k=1}^K\\mu_k^{m_k}\\end{equation*}\n",
         "\n",
         "### 2項分布式\n",
         "\\begin{equation*}\n",
@@ -60,7 +60,7 @@
         "### 2項分布式の多項化\n",
         "\n",
         "\\begin{equation*}\n",
-        "Mult(m_1, m_2, \\ldots, m_k|N, \\mu) = \\left(\n",
+        "Mult(m_1, m_2, \\ldots, m_k|N, \\boldsymbol{\\mu}) = \\left(\n",
         "    \\begin{array}{c}\n",
         "      N\\\\\n",
         "     m_1m_2\\ldots m_k\n",
