条件の追記

--- a/scr/PRML2_2_1.ipynb
+++ b/scr/PRML2_2_1.ipynb
@@ -41,7 +41,9 @@
         "\n",
         "\\begin{equation*}\n",
         "p(\\boldsymbol{\\mu} | \\boldsymbol{\\alpha}) \\varpropto \\prod_{k = 1}^K \\mu_k^{\\alpha_k-1}\n",
-        "\\end{equation*}\n"
+        "\\end{equation*}\n",
+        "\n",
+        "ただし$\\Sigma_k\\mu_k=1$である。\n"
       ]
     },
     {
