--- a/scr/PRML2_2_1.ipynb
+++ b/scr/PRML2_2_1.ipynb
@@ -43,7 +43,15 @@
         "p(\\boldsymbol{\\mu} | \\boldsymbol{\\alpha}) \\varpropto \\prod_{k = 1}^K \\mu_k^{\\alpha_k-1}\n",
         "\\end{equation*}\n",
         "\n",
-        "ただし$\\Sigma_k\\mu_k=1$である。\n"
+        "ただし$\\Sigma_k\\mu_k=1 $であり、$\\boldsymbol{\\alpha}$は有効観測数である。\n",
+        "\n",
+        "これを以下のように正規化したものがディリクレ分布となる\n",
+        "\n",
+        "\\begin{equation*}\n",
+        "Dir(\\boldsymbol{\\mu} | \\boldsymbol{\\alpha}) = \\frac{\\Gamma(\\alpha_0)}{\\Gamma(\\alpha_1) \\dots \\Gamma(\\alpha_K)}\\prod_{k = 1}^K \\mu_k^{\\alpha_k-1}\n",
+        "\\end{equation*}\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -88,7 +96,7 @@
         "ax.plot_surface(xx2, yy2, Z, cmap=cm.coolwarm, antialiased=False)\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
